# libpyinfinite

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: check.yml
libpyinfinite/: __init__.py
libpyinfinite/module/: module.py  moduleBlockHeader.py  moduleFile.py  moduleHeader.py  moduleLoader.py
libpyinfinite/module/oodle/: oodleDecompressor.py
libpyinfinite/reader/: common.py
libpyinfinite/tag/: tag.py  tagDataBlock.py  tagDataReference.py  tagDependency.py  tagHeader.py  tagReference.py  tagStruct.py  tagTypes.py
libpyinfinite/tag/definitions/: cmsw.py  mat.py  rucs.py  rucy.py
libpyinfinite/tag/structs/: anyTag.py  infiniteStructs.py
libpyinfinite/tag/zonesets/: zonesetHeader.py  zonesetInstance.py  zonesetInstanceHeader.py  zonesetTag.py
